# Competitive-Programming-

./: .gitattributes  .gitignore  Bad LaTeX.cpp  CMakeLists.txt  Cut Ribbon.cpp  Stamina and Tasks.cpp  input.txt  orlando.cpp  template.cpp
Codeforces/: ABAB Construction.cpp  Array Coloring.cpp  Beautiful Sequence.cpp  Bit++.cpp  Buttons.cpp  Counting Binary Strings.cpp  Cover in Water.cpp  Desorting.cpp  Don't Try to Count.cpp  Doremy's Paint 3.cpp  Forbidden Integer.cpp  Game with Integers.cpp  Goals of Victory.cpp  Grasshopper on a Line.cpp  How Much Does Daytona Cost.cpp  Jagged Swaps.cpp  Line Trip.cpp  Lost Civilization (Easy Version).cpp  Needle in a Haystack.cpp  Prepend and Append.cpp  Remove the Ends.cpp  Sequence Game.cpp  Sieve of Erato67henes.cpp  Twin Permutations.cpp  Two Permutations.cpp  United We Stand.cpp  Untitled1.cpp  dpsita 24 064 26 .cpp
Contests/: template.cpp
Contests/02_05_26/: A.cpp  X.cpp  Z.cpp
Contests/02_06_26/: A.cpp  H.cpp
Contests/02_26_26/: Colorful Boredom.cpp  New Datacenter.cpp  New New Datacenters.cpp  Rainy Night App.cpp  Rainy Night.cpp
Contests/03_12_26/: A.cpp  B.cpp  C.cpp  D.cpp
Contests/03_29_26/: A.cpp  B.cpp  C.cpp  Chard.cpp
Contests/106032_2025_ICPC_Syrian/: A.cpp
Contests/10_21_25/: A.cpp  B.cpp
Contests/2026_ICPC_GPM_1ra_Fecha/: Erasmus Valthron.cpp
Contests/Abril_Fools_day_26/: A.cpp
Contests/Codeforces_Round_189/: A.cpp
Contests/Gran Premio de Mexico 2da Fecha/: Alaric Magic Partition.cpp  Bogo Sort Probability.cpp  Draconis Subarrays.cpp  How Many Groups.cpp  (+2 more)
Data Structures/: Arrays.cpp
(+5 files in other folders)
